[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.15.0",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.15.0",
    "davey>=0.1.6",
    "discord-py>=2.7.1",
    "feedparser>=6.0.12",
    "pynacl>=1.6.2",
    "requests>=2.34.2",
    "tweety-ns>=2.4.1",
    "yt-dlp>=2026.6.9",
]
